# vsomeip

./: .gitignore  CMakeLists.txt  CMakeToolchain386.txt  README.c2a.md  build-i386.sh  build.sh  setup.sh
config/: vsomeip-local.client.json  vsomeip-local.json  vsomeip-local.plain.client.json  vsomeip-local.plain.service.json  vsomeip-local.plus_tcp.client.json  vsomeip-local.plus_tcp.service.json  vsomeip-local.service.json  vsomeip-local.tcp.900.client.json  vsomeip-local.tcp.900.service.json  vsomeip-local.tcp.client.json  vsomeip-local.tcp.service.json  vsomeip.json
examples/: CMakeLists.txt  notify-sample-plain.cpp  notify-sample.cpp  readme.txt  sample-ids.hpp  subscribe-sample-plain.cpp  subscribe-sample.cpp
implementation/configuration/include/: configuration.hpp  configuration_impl.hpp  event.hpp  internal.hpp.in  service.hpp
implementation/configuration/src/: configuration_impl.cpp
implementation/routing/src/: event.cpp  routing_manager_base.cpp  routing_manager_impl.cpp  routing_manager_proxy.cpp
implementation/runtime/src/: application_impl.cpp
implementation/service_discovery/include/: defines.hpp
implementation/service_discovery/src/: service_discovery_impl.cpp
implementation/utility/src/: utility.cpp
interface/vsomeip/: application.hpp
lib/i386/: libboost_filesystem.so.1.67.0  libboost_thread.so.1.67.0
